# fastapi-task-management

./: .env  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 1286e8739de0_create_users_and_tasks_tables.py  2ffb7c80999c_add_task_ownership.py
app/: main.py
app/core/: security.py
app/db/: deps.py  session.py
app/models/: task.py  user.py
app/repositories/: task.py  user.py
app/routers/: auth.py  tasks.py  users.py
app/schema/: auth.py  task.py  user.py
app/service/: auth_service.py  task_service.py  user_service.py
app/storage/: memory.py
